--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Donn"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Welcome"
+  bio              : "Great things happen<br>when i ask WHY NOT"
   location         : "Somewhere"
   email            : "donovanccc4@gmail.com"
   links:
